# dataengineer_toolbox

./: COMMANDS.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  build_package.py  dev.py  instructions.txt  pyproject.toml  validate.py
.github/workflows/: release.yml  workflow.yml
copilot_instructions/: 001_generate_solution_and_buildmd  002_generate_scd.md  003_generate_unittests.md  004_general_functions.md
dataeng_toolbox/: __init__.py  core.py  data_loader.py  entity.py  model.py  spark_utils.py  utils.py
dataeng_toolbox/copilot_instructions/: 001_generate_solution_and_build
dataeng_toolbox/core/: __init__.py
doc/: data_architecture_guidelines.md
examples/: README.md  basic_usage.py  vtable_model_example.py
tests/: __init__.py  test_core.py  test_vtable_model.py  test_vtable_serialization.py
tests_in_notebooks/: n_scd_validation.ipynb  sample_notebook.ipynb
